登入區域驗證碼

--- a/index.html
+++ b/index.html
@@ -2497,6 +2497,21 @@
               <figcaption class="mt-2 text-black-50">* 身份證號碼請填寫「登錄於 Lexus 系統之車輛使用人」資訊。</figcaption>
             </div>
 
+            <!-- 0517驗證碼 -->
+            <div class="row g-3 mb-3">
+              <div class="col">
+                <div class="form-floating">
+                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                  <label for="floatingInput">請輸入驗證碼</label>
+                </div>
+              </div>
+              <div class="col">
+                <div class="noteBoxs">
+                  驗證碼顯示區
+                </div>
+              </div>
+            </div>
+
             <div class="noteBoxs mt-2 mb-4">
               若您是不只擁有一台Lexus的車主，建議可以將每個車牌都登入一次，會有不同的優惠劵可以使用喔！
             </div>
