更新modus02.html手機版顯示問題

--- a/modus02.html
+++ b/modus02.html
@@ -144,7 +144,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">欣欣影城-中山店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式01</h5>
 
@@ -169,7 +169,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">華納威秀-信義店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式02</h5>
 
@@ -194,7 +194,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">國賓影城-西門店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式03</h5>
 
@@ -219,7 +219,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">梅花電影院-和平店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式04</h5>
 
@@ -244,7 +244,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">國賓影城-長春店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式05</h5>
 
@@ -269,7 +269,7 @@
               <div class="col-sm-4 mb-3">
                 <div class="card modus-mobile">
                   <div class="modus-img"><img src="images/pic02.png" class="card-img-top"></div>
-                  <div class="card-body">
+                  <div class="card-body w240">
                     <p class="card-text mb-1">新光影城</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式06</h5>
 
