更新手機版顯示問題

--- a/modus02.html
+++ b/modus02.html
@@ -148,7 +148,7 @@
                     <p class="card-text mb-1">欣欣影城-中山店</p>
                     <h5 class="card-title text-primary">標題名稱：核銷方式01</h5>
 
-                    <p class="card-text modus-text mb-1" title="使用樓層：">1F</p>
+                    <p class="card-text modus-text mb-1" title="優惠品項：">2/1-2/29：到「Hyread Gaze電子書、閱讀器官方社群」臉書粉絲團曬出活動期間購書訂單，寫下30個字，就可以參加抽獎。</p>
                     <p class="card-text modus-text-red" title="剩餘數量：">80 份</p>
 
                     <div class="container-fluid overflow-hidden px-0">
