index-p2.html 65 行註解

--- a/index-p2.html
+++ b/index-p2.html
@@ -62,7 +62,7 @@
         <div class="container-fluid">
           <div class="row align-items-center">
             <div class="col"><h3 class="text-white mb-0">LEXUS尊榮回饋 優惠介紹</h3></div>
-            <div class="col-auto" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><a><img src="images/search-icon.svg" class="mob-serach"></a></div>
+            <!-- <div class="col-auto" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><a><img src="images/search-icon.svg" class="mob-serach"></a></div> -->
           </div>
         </div>
       </div>
