修改v1:刪除頁面

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     
     <script src="https://kit.fontawesome.com/25b2931f6f.js" crossorigin="anonymous"></script>
-
   </head>
 
   <body>
@@ -59,8 +58,8 @@
       <div class="mobile-header">
         <div class="container-fluid">
           <div class="row align-items-center">
-            <div class="col"><h3 class="text-white mb-0">LEXUS尊榮回饋 優惠介紹</h3></div>
-            <div class="col-auto" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><a><img src="images/search-icon.svg" class="mob-serach"></a></div>
+            <!-- <div class="col"><h3 class="text-white mb-0">LEXUS尊榮回饋 優惠介紹</h3></div> -->
+            <!-- <div class="col-auto" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><a><img src="images/search-icon.svg" class="mob-serach"></a></div> -->
           </div>
         </div>
       </div>
