--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
           </div>
           <div class="col-4 text-center"><img src="images/logo.svg" class="logoboxs"></div>
           <div class="col-4">
+            <!-- qa -->
             <a href="qa.html" class="float-end"><img src="images/icon-qa.svg"  class="h-iconboxs"></a>
+            <!-- search -->
+            <a class="float-end me-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" ><img src="images/icon-search.svg" class="mob-serach"></a>
+            <!-- member -->
             <a href="" class="float-end me-3" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="images/icon-member.svg"  class="h-iconboxs"></a>
           </div>
         </div>
@@ -162,19 +166,19 @@
             <div class="swiper-wrapper swiper-wrapper-tag nav nav-pills" id="pills-tab" role="tablist" style="flex-wrap: nowrap;">
               <!-- 010 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link active" id="tag01-tab" data-bs-toggle="pill" data-bs-target="#tag01" role="tab" aria-controls="tag01" aria-selected="true">
-                <i class="fa-solid fa-store d-block fs-4"></i>全部
+                全部
               </button>
               <!-- 011 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag02-tab" data-bs-toggle="pill" data-bs-target="#tag02" role="tab" aria-controls="tag02" aria-selected="false">
-                <i class="fa-solid fa-martini-glass-empty d-block fs-4"></i>渡假休閒
+                渡假休閒
               </button>
               <!-- 012 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag03-tab" data-bs-toggle="pill" data-bs-target="#tag03" role="tab" aria-controls="tag03" aria-selected="false">
-                <i class="fa-solid fa-tree-city d-block fs-4"></i>類別項目01
+                類別項目01
               </button>
               <!-- 013 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag04-tab" data-bs-toggle="pill" data-bs-target="#tag04" role="tab" aria-controls="tag04" aria-selected="false">
-                <i class="fa-solid fa-umbrella-beach d-block fs-4"></i>類別項目02
+                類別項目02
               </button>
               <!-- 014 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag05-tab" data-bs-toggle="pill" data-bs-target="#tag05" role="tab" aria-controls="tag05" aria-selected="false">
@@ -2509,10 +2513,6 @@
                   驗證碼顯示區
                 </div>
               </div>
-            </div>
-
-            <div class="noteBoxs mt-2 mb-4">
-              若您是不只擁有一台Lexus的車主，建議可以將每個車牌都登入一次，會有不同的優惠劵可以使用喔！
             </div>
 
             <div class="container-fluid overflow-hidden px-0">
