--- a/allcar02.html
+++ b/allcar02.html
@@ -249,7 +249,7 @@
     <footer class="my-5">
       <hr class="my-4">
       <div class="container-fluid">
-        <div class="row align-items-center">
+        <!-- <div class="row align-items-center">
           <div class="col-lg-6 col-12 text-lg-start text-center">
             <a href="https://www.instagram.com/lexus_taiwan/?hl=zh-tw" class="social-font me-3" target="_blank">
               <i class="fab fa-instagram"></i>
@@ -260,9 +260,9 @@
             <a href="https://www.youtube.com/user/LEXUSTaiwanchannel" class="social-font" target="_blank">
               <i class="fab fa-youtube"></i>
             </a>
-          </div>
-          <div class="col-lg-6 col-12 text-lg-end text-center my-lg-0 my-4">
-            <a href="https://discoverlexus.com/" class="footerlink" target="_blank">全球LEXUS</a>
+          </div> -->
+          <div class="col-12 text-lg-end text-center my-lg-0 my-4">
+            <a href="https://www.lexus.com.tw/" class="footerlink" target="_blank">LEXUS官網</a>
             <a href="https://www.lexus.com.tw/privacy.aspx" class="footerlink" target="_blank">隱私權條款</a>
           </div>
           <div class="col-12 text-lg-end text-center f13">© HOTAI MOTOR CO.,LTD. ALL RIGHTS RESERVED.   和泰汽車股份有限公司 03251108</div>
