--- a/writeoff03.html
+++ b/writeoff03.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
-    <script language="javascript" type="text/javascript" src="js/banner.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -27,14 +26,21 @@
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
           <div class="col-4">
-            <a href="https://www.lexus.com.tw/eliterewards/index.aspx#/" class="social-font h-arrow">
+            <!-- 有登入的話，記得要把這個打開 -->
+            <!-- <button  class="bg-white social-font h-arrow">
               <i class="bi bi-chevron-left"></i>
-            </a>
+            </button> -->
           </div>
-          <div class="col-4 text-center"><img src="images/logo.svg" class="logoboxs"></div>
-          <div class="col-4">
+          <div class="col-4 text-center">
+            <a href="https://www.lexus.com.tw/eliterewards/index.aspx#/"><img src="images/logo.svg" class="logoboxs"></a>
+          </div>
+          <div class="col-4 d-flex justify-content-end align-items-center">
+            <!-- member -->
+            <a href="" class="float-end me-xl-3 me-2" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="images/icon-member.svg"  class="h-iconboxs"></a>
+            <!-- search -->
+            <a class="float-end me-xl-3 me-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" ><img src="images/icon-search.svg" class="mob-serach"></a>
+            <!-- qa -->
             <a href="qa.html" class="float-end"><img src="images/icon-qa.svg"  class="h-iconboxs"></a>
-            <a href="" class="float-end me-3" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="images/icon-member.svg"  class="h-iconboxs"></a>
           </div>
         </div>
       </div>
@@ -56,7 +62,7 @@
     <!-- mobile topBoxs -->
     <div class="mobile-open w-100">
       <div class="mobile-header">
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
           <div class="row align-items-center">
             <div class="col-12">
               <a href="index-login.html" class="text-white fs-6">
@@ -66,14 +72,14 @@
             <div class="col-12">
               <h3 class="text-white mb-0 ms-3">休閒百貨</h3>
             </div>
-            <!-- <div class="col-auto"><a><img src="images/search-icon.svg" class="mob-serach"></a></div> -->
+            <div class="col-auto"><a><img src="images/search-icon.svg" class="mob-serach"></a></div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
     <!-- web topBoxs -->
-    <div class="topboxs py-4 mobile-close">
+    <!-- <div class="topboxs py-4 mobile-close">
       <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col-12 px-0">
@@ -84,12 +90,12 @@
           <div class="col-12 px-0">
             <h3 class="mb-0 ms-3">休閒百貨</h3>
           </div>
-          <!-- <div class="col-auto">
+          <div class="col-auto">
             <a><img src="images/search-icon.svg"></a>
-          </div> -->
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- 優惠標題 -->
     <div class="navboxs pt-lg-4 pt-3">
@@ -99,12 +105,12 @@
             <div class="modusTitile">
               <div class="modusTitileboxs">
                 <div class="fs-5 mb-1">美福線上購物</div>
-                <div class="fs-4 text-primary">核銷方式3-店家碼掃描兌換</div>
+                <div class="fs-5 text-primary">01. 單券單店-單獨提供</div>
               </div>
             </div>
           </div>
           <div class="col-1 px-lg-0 px-3">
-            <!-- <div class="flagBoxsBig">限量</div> -->
+            <div class="flagBoxsBig">限量</div>
           </div>
         </div>
       </div>
@@ -114,18 +120,18 @@
     <main class="mainboxs w990 mt-lg-5 mt-3">
       <div class="container-fluid px-lg-0 px-3">
         <div class="row">
-          <div class="col-12 mb-4"><img src="images/pic04.png" class="img-fluid"></div>
+          <div class="col-12 mb-4"><img src="images/pic01.png" class="img-fluid"></div>
           <!-- <div class="col-12 mb-4"><div class="limitTitle">僅限【美福線上購物】使用</div></div> -->
-          <div class="col-lg-6 col-12 mb-4">
+          <div class="col-12 mb-4">
             <p class="modusText mb-1 fs-5"><i class="bi bi-calendar2-event align-baseline me-2"></i>優惠期限：</p>
             <p class="modusTextDetailed f16 ps-4">2023年07月01日至2024年06月30日止</p>
           </div>
-          <div class="col-lg-6 col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>適用對象：</p>
+          <div class="col-12 mb-4">
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>適用對象：</p>
             <p class="modusTextDetailed f16 ps-4">Lexus 車主尊榮回饋方案全級別會員。</p>
           </div>
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>優惠品項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠品項：</p>
             <p class="modusTextDetailed f16 ps-4">
               1. 全館購物滿$2,300輸入優惠碼享好康禮遇：<br>
                    ①「LEXUS230」享免運優惠。<br>
@@ -136,7 +142,7 @@
             </p>
           </div>
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>注意事項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>注意事項：</p>
             <p class="modusTextDetailed f16 ps-4">
               限 Lexus 會員本人同行消費。<br>
               每桌每次消費，限兌換優惠一份。<br>
@@ -149,17 +155,17 @@
             </p>
           </div>
 
-          <div class="col-12 border-top border-bottom py-3 mb-3">
+          <!-- <div class="col-12 border-top border-bottom py-3 mb-3">
             <a class="badge label-text fs-6 me-2">標籤一</a>
             <a class="badge label-text fs-6">標籤二</a>
-          </div>
+          </div> -->
         </div>
       </div>
 
       <div class="container-fluid overflow-hidden px-lg-0 px-3">
         <div class="row gx-2">
           <div class="col-6">
-            <a class="w-100 btn btn-black" data-bs-toggle="modal" href="#modus010" role="button">立即使用</a>
+            <a href="use01.html" class="w-100 btn btn-black">立即使用</a>
           </div>
           <div class="col-6">
             <a href="#" class="w-100 btn btn-black">領取優惠劵</a>
@@ -171,7 +177,7 @@
     <footer class="my-5">
       <hr class="my-4">
       <div class="container-fluid">
-        <div class="row align-items-center">
+        <!-- <div class="row align-items-center">
           <div class="col-lg-6 col-12 text-lg-start text-center">
             <a href="https://www.instagram.com/lexus_taiwan/?hl=zh-tw" class="social-font me-3" target="_blank">
               <i class="fab fa-instagram"></i>
@@ -182,9 +188,9 @@
             <a href="https://www.youtube.com/user/LEXUSTaiwanchannel" class="social-font" target="_blank">
               <i class="fab fa-youtube"></i>
             </a>
-          </div>
-          <div class="col-lg-6 col-12 text-lg-end text-center my-lg-0 my-4">
-            <a href="https://discoverlexus.com/" class="footerlink" target="_blank">全球LEXUS</a>
+          </div> -->
+          <div class="col-12 text-lg-end text-center my-lg-0 my-4">
+            <a href="https://www.lexus.com.tw/" class="footerlink" target="_blank">LEXUS官網</a>
             <a href="https://www.lexus.com.tw/privacy.aspx" class="footerlink" target="_blank">隱私權條款</a>
           </div>
           <div class="col-12 text-lg-end text-center f13">© HOTAI MOTOR CO.,LTD. ALL RIGHTS RESERVED.   和泰汽車股份有限公司 03251108</div>
@@ -197,22 +203,21 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header memberBoxsTitle text-center">
-            <h5 class="modal-title" id="exampleModalLabel">我的尊榮回饋</h5>
+            <h4 class="modal-title" id="exampleModalLabel">我的尊榮回饋</h4>
             <img src="images/decorate.svg">
           </div>
 
           <div class="modal-body m-3">
-            <h3>親愛(ANY-8500)車主，您好：</h3>
             <p class="fs-5 mb-5 pb-5">
-              目前您已登入尊榮回饋系統，若您想使用其他車牌登入查詢優惠，請按下『登出』按鈕，若否則請按下『取消』。
+              您已成功登入APP-2729，如您有切換其他車牌之需求，可登出後再以該車牌登入。
             </p>
             <div class="container-fluid overflow-hidden px-0">
               <div class="row gx-2">
                 <div class="col-6">
-                  <button type="button" class="w-100 btn btn-black" data-bs-dismiss="modal">取 消</button>
+                  <button type="button" class="w-100 btn btn-black" data-bs-dismiss="modal">維持登入</button>
                 </div>
                 <div class="col-6">
-                  <button type="button" class="w-100 btn btn-black">登 出</button> 
+                   <button type="button" class="w-100 btn btn-black" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">登 出</button>
                 </div>
               </div>
             </div>
@@ -220,57 +225,19 @@
         </div>
       </div>
     </div>
-
-    <!-- 核銷方式01 -->
-    <div class="modal fade" id="modus010" aria-hidden="true" aria-labelledby="modus010Label" tabindex="-1">
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
-            <div class="row">
-              <div class="col pe-0"><i class="blackBar"></i></div>
-              <div class="col-auto">
-                <div class="row">
-                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
-                  <div class="col-12 fs-4 text-primary">核銷方式3-店家碼掃描兌換</div>
-                </div>
-              </div>
-            </div>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-header memberBoxsTitle text-center">
+            <h4 class="modal-title" id="exampleModalLabel">我的尊榮回饋</h4>
+            <img src="images/decorate.svg">
           </div>
-          <div class="modal-body">
-            <p class="f16 ps-3">確定兌換此優惠？</p>
-            <div class="position-relative">
-              <img src="images/modus-pic.png" class="img-fluid">
-            </div>
+          <div class="modal-body text-center">
+            <h5 class="my-5">已登出</h5>
           </div>
-          <div class="modal-footer">
-            <button class="w-100 btn btn-black" data-bs-target="#modus012" data-bs-toggle="modal" data-bs-dismiss="modal">確定兌換</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="modal fade" id="modus012" aria-hidden="true" aria-labelledby="modus012Label2" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <div class="row">
-              <div class="col pe-0"><i class="blackBar"></i></div>
-              <div class="col-auto">
-                <div class="row">
-                  <div class="col-12 fs-5 mb-1 d-block">Oh my!原燒</div>
-                  <div class="col-12 fs-4 text-primary">核銷方式3-店家碼掃描兌換</div>
-                </div>
-              </div>
-            </div>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p class="f16 ps-3">您於 2023年12月26日 16:23:49 成功兌換。<br>畫面將自動轉跳至我的優惠頁面</p>
-            <div class="position-relative">
-              <img src="images/modus-cover.png" class="img-fluid position-absolute top-0 start-0">
-              <img src="images/modus-pic.png" class="img-fluid">
-            </div>
-          </div>
+          <!-- <div class="modal-footer">
+            <a href="index-login.html" class="w-100 btn btn-black">登 入</a>
+          </div> -->
         </div>
       </div>
     </div>
