修改search＋會員資格文字調整＋banner

--- a/modus01.html
+++ b/modus01.html
@@ -49,10 +49,11 @@
     <!-- banner -->
     <div class="swiper mySwiper mobile-close">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/banner.png"></div>
-        <div class="swiper-slide"><img src="images/banner02.png"></div>
-        <div class="swiper-slide"><img src="images/banner03.png"></div>
-        <div class="swiper-slide"><img src="images/banner04.png"></div>
+        <div class="swiper-slide"><img src="images/banner.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner02.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner03.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner04.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner05.jpg"></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
@@ -128,7 +129,7 @@
           </div>
           <div class="col-12 mb-4">
             <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>適用對象：</p>
-            <p class="modusTextDetailed f16 ps-4">Lexus 車主尊榮回饋方案全級別會員。</p>
+            <p class="modusTextDetailed f16 ps-4">全級別會員。</p>
           </div>
           <div class="col-12 mb-4">
             <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠內容：</p>
