--- a/writeoff03.html
+++ b/writeoff03.html
@@ -49,10 +49,11 @@
     <!-- banner -->
     <div class="swiper mySwiper mobile-close">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/banner.png"></div>
-        <div class="swiper-slide"><img src="images/banner02.png"></div>
-        <div class="swiper-slide"><img src="images/banner03.png"></div>
-        <div class="swiper-slide"><img src="images/banner04.png"></div>
+        <div class="swiper-slide"><img src="images/banner.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner02.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner03.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner04.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner05.jpg"></div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
