調整優惠內容行數

--- a/index-login.html
+++ b/index-login.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- web topBoxs -->
-   <!--  <div class="topboxs py-4 mobile-close">
+    <!--  <div class="topboxs py-4 mobile-close">
       <div class="mainboxs w990 container-fluid px-0">
         <div class="row mx-auto align-items-center">
           <div class="col px-0">
@@ -3183,7 +3183,7 @@
                               <div class="col-xl-12 col-8">
                                 <div class="card-body p-0 p-xl-3">
                                   <p class="card-text used mb-0  mobile-close">Le Ruban Pâtisserie 法朋烘焙甜點坊</p>
-                                  <h5 class="card-title used mb-3">當月壽星生日禮</h5>
+                                  <h5 class="card-title used mb-3">當月壽星生日禮當月壽星生日禮當月壽星生日禮當月壽星生日禮</h5>
 
                                   <p class="card-text cupon-text used mb-2  mobile-close">當月壽星購買法朋7吋以上慶祝蛋糕即贈送保冷袋（價值＄299）
                                   </p>
