--- a/index-login.html
+++ b/index-login.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/public.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     
     <script src="https://kit.fontawesome.com/25b2931f6f.js" crossorigin="anonymous"></script>
 
@@ -160,7 +162,7 @@
                       </div>
                       <div class="card-body">
                         <p class="card-text mb-0">Le Ruban Pâtisserie 法朋烘焙甜點坊</p>
-                        <h5 class="card-title text-primary mb-3">當月壽星生日禮</h5>
+                        <h5 class="card-title text-primary mb-3">當a月壽星生日禮當a月壽星生日禮當a月壽星生日禮當a月壽星生日禮當a月壽星生日禮</h5>
 
                         <!-- <div class="mb-2">
                           <span class="badge label-text me-2">標籤一</span>
