--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <!-- banner -->
     <div class="swiper mySwiper mobile-close">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/banner.jpg"></div>
-        <div class="swiper-slide"><img src="images/banner02.jpg"></div>
-        <div class="swiper-slide"><img src="images/banner03.jpg"></div>
+        <div class="swiper-slide"><img src="images/a.jpg"></div>
+        <div class="swiper-slide"><img src="images/b.jpg"></div>
+<!--         <div class="swiper-slide"><img src="images/banner03.jpg"></div>
         <div class="swiper-slide"><img src="images/banner04.jpg"></div>
-        <div class="swiper-slide"><img src="images/banner05.jpg"></div>
+        <div class="swiper-slide"><img src="images/banner05.jpg"></div> -->
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
