修正小標籤顯示

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               </button>
               <!-- 015 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag06-tab" data-bs-toggle="pill" data-bs-target="#tag06" role="tab" aria-controls="tag06" aria-selected="false">
-                Lexus 原廠專屬優惠
+                Lexus原廠優惠
               </button>
               <!-- 016 -->
               <button class="swiper-slide swiper-slide-tag nav-link tag-link" id="tag07-tab" data-bs-toggle="pill" data-bs-target="#tag07" role="tab" aria-controls="tag07" aria-selected="false">
