--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
           <div class="col-4">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loadingModal">Loading BTN</button>
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loadingModal">Loading BTN</button> -->
             <!-- 有登入的話，記得要把這個打開 -->
-            <!-- <button  class="bg-white social-font h-arrow">
-              <i class="bi bi-chevron-left"></i>
-            </button> -->
+            <button  class="bg-white social-font h-arrow">
+              <i class="bi bi-house"></i>
+            </button>
           </div>
           <div class="col-4 text-center">
             <a href="https://www.lexus.com.tw/eliterewards/index.aspx#/"><img src="images/logo.svg" class="logoboxs"></a>
