修改我的票卷夾，可使用/allcar03.html

--- a/modus05.html
+++ b/modus05.html
@@ -249,7 +249,7 @@
 
       document.getElementById("show-code-btn").addEventListener("click", function () {
         const html = `
-          <div class="alert alert-success d-flex align-items-center justify-content-between" role="alert">
+          <div class="alert alert-secondary d-flex align-items-center justify-content-between" role="alert">
             <div>
               <strong>專屬優惠序號：</strong>
               <span id="promo-code">${promoCode}</span>
